--- a/LKaifer_BugTracker/Views/Shared/_Layout.cshtml
+++ b/LKaifer_BugTracker/Views/Shared/_Layout.cshtml
@@ -52,6 +52,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             ul.top_dp_agile li.profile_details_drop.open a.dropdown-toggle i.fa-chevron-down {
                 transform: rotate(180deg);
             }
+        div.wthree_agile_admin_info {
+            background-color: aliceblue;
+            background-image: url('../../images/brick-wall.png');
+            background-repeat:repeat;
+        }
+        div.bugs-begone-presentation{
+            background-color:white;
+            box-shadow: 1px 1px 5px 2px lightgray;
+            padding:40px;
+        }
     </style>
 </head>
 <body>
