--- a/LKaifer_BugTracker/Content/Timeline.css
+++ b/LKaifer_BugTracker/Content/Timeline.css
@@ -155,7 +155,8 @@
         display: table-cell;
         height: 280px;
         width: 20%;
-        min-width: 320px;
+        /*min-width:320px;*/
+        min-width: 24rem;
         float: none !important;
         padding-left: 0px;
         padding-right: 20px;
